tests/liberr/liberr.exp
Error -------------------------------------------------- libs/type_error.js:2:34

Library type error:
libs/type_error.js:2
  2: declare function foo(x: number): Array;
                                      ^^^^^ Cannot use type without exactly 1 type argument.

Error ---------------------------------------------------------------- a.js:5:17

Error: a.js:5
  5: var x: string = 0;
                     ^ Cannot assign `0` to `x` because number [1] is incompatible with string [2].
  References:
    5: var x: string = 0;
                       ^ [1]: number
    5: var x: string = 0;
              ^^^^^^ [2]: string


Found 2 errors
